Fix api: use always /api/ in url

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 	  },
 	  methods: {
 	      createEvent: function() {
-		  fetch(location.protocol+'//'+location.host+location.pathname+'/', {
+		  fetch(location.protocol+'//'+location.host+location.pathname+'/api', {
 		      method: 'POST',
 		      mode: 'cors',
 		      cache: 'no-cache',
