--- a/html/index.html
+++ b/html/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Judith und Phlipp kommen wieder ins Allgäu</title>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-
+    <script src="config.js"></script>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <style>
@@ -12,7 +12,6 @@
       body{  display: -ms-flexbox; display: flex; -ms-flex-align: center; align-items: center;  padding-top: 90px; padding-bottom: 40px; background-color: #f5f5f5;}
       #calendar {margin: auto}
       #newEvent { width: 100%; max-width: 420px;}
-      
     </style>
   </head>
   <body>
@@ -88,7 +87,26 @@
       </table>
       </div>
     </div>
+
     <script type="text/javascript">
+      function api_call(url, method='GET', body={}) {
+	  body = method==='GET'? {} : {body: body}
+	  return fetch(BACKEND_URL + '/' + url, {
+	      method: method,
+	      mode: 'cors',
+	      cache: 'no-cache',
+	      credentials: 'same-origin',
+	      headers: { 'Content-Type': 'application/json' },
+	      redirect: 'follow',
+	      referrerPolicy: 'no-referrer',
+	      ...body
+	      })
+      }
+
+      function get_api(url)        { return api_call(url); }
+      function post_api(url, body) { return api_call(url, 'POST', body); }
+      function put_api(url, body)  { return api_call(url, 'PUT', body); }
+
       var app3 = new Vue({
 	  el: '#calendar',
 	  data: {
@@ -108,31 +126,16 @@
 	      }
 	      params = window.location.href.split('/')
 	      id = params[params.length - 1]
-	      fetch(location.protocol+'//'+location.host+location.pathname+'/api/'+id, {
-		  method: 'GET',
-		  mode: 'cors', 
-		  cache: 'no-cache',
-		  credentials: 'same-origin',
-		  headers: {'Content-Type': 'application/json'},
-		  redirect: 'follow',
-		  referrerPolicy: 'no-referrer',
-	      }).then(d=>d.json()).then(c => this.currentEvent = c);
+	      api_call(id).then(d=>d.json()).then(c => this.currentEvent = c);
 	  },
 	  methods: {
 	      createEvent: function() {
-		  fetch(location.protocol+'//'+location.host+location.pathname+'/api', {
-		      method: 'POST',
-		      mode: 'cors',
-		      cache: 'no-cache',
-		      credentials: 'same-origin',
-		      headers: { 'Content-Type': 'application/json' },
-		      redirect: 'follow',
-		      referrerPolicy: 'no-referrer',
-		      body: JSON.stringify(this.newEvent)
-		  }).then(d=>d.json()).then(c => {
-		      this.currentEvent = c;
-		      history.pushState({urlPath: c.id}, "", c.id)
-		  })
+		  post_api('', JSON.stringify(this.newEvent))
+		      .then(d => d.json())
+		      .then(c => {
+			  this.currentEvent = c;
+			  history.pushState({urlPath: c.id}, "", c.id)
+		      })
 	      },
 	      addProposal: function() {
 		  const target = new Date(this.newProposal)
@@ -142,19 +145,12 @@
 	      },
 	      add: function() {
 		  var target = {'nick': this.newAttendee, 'free': [], 'occupied':[]}
-		  fetch(location.protocol+'//'+location.host+location.pathname+'/api/'+this.currentEvent.id+'/attendee', {
-		      method: 'POST',
-		      mode: 'cors',
-		      cache: 'no-cache',
-		      credentials: 'same-origin',
-		      headers: { 'Content-Type': 'application/json' },
-		      redirect: 'follow',
-		      referrerPolicy: 'no-referrer',
-		      body: JSON.stringify(target)
-		  }).then(d=>d.json()).then(c => {
-		      target = c
-		      this.currentEvent.attendees.push(target)
-		  })
+		  post_api(this.currentEvent.id + '/attendee', JSON.stringify(target))
+		      .then(d => d.json())
+		      .then(c => {
+			  target = c
+			  this.currentEvent.attendees.push(target)
+		      })
 	      },
 	      toggle: function(attendee, date) {
 		  if(attendee.free.includes(date)) {
@@ -167,20 +163,11 @@
 		      attendee.free.push(date)
 		  }
 
-		  fetch(location.protocol+'//'+location.host+location.pathname+'/api/'+this.currentEvent.id+'/attendee/'+attendee.id, {
-		      method: 'PUT',
-		      mode: 'cors',
-		      cache: 'no-cache',
-		      credentials: 'same-origin',
-		      headers: { 'Content-Type': 'application/json' },
-		      redirect: 'follow',
-		      referrerPolicy: 'no-referrer',
-		      body: JSON.stringify(attendee)
-		  })
+		  put_api(this.currentEvent.id + '/attendee/' + attendee.id,
+			  JSON.stringify(attendee))
 	      }
 	  }
       })
     </script>
-
   </body>
 </html>
