`api` is now a mandatory url prefix of the backend

--- a/html/index.html
+++ b/html/index.html
@@ -91,7 +91,7 @@
     <script type="text/javascript">
       function api_call(url, method='GET', body={}) {
 	  body = method==='GET'? {} : {body: body}
-	  return fetch(BACKEND_URL + '/' + url, {
+	  return fetch(BACKEND_URL + '/api/' + url, {
 	      method: method,
 	      mode: 'cors',
 	      cache: 'no-cache',
