--- a/html/index.html
+++ b/html/index.html
@@ -91,16 +91,17 @@
     <script type="text/javascript">
       function api_call(url, method='GET', body={}) {
 	  body = method==='GET'? {} : {body: body}
-	  return fetch(BACKEND_URL + '/api/' + url, {
-	      method: method,
-	      mode: 'cors',
-	      cache: 'no-cache',
-	      credentials: 'same-origin',
-	      headers: { 'Content-Type': 'application/json' },
-	      redirect: 'follow',
-	      referrerPolicy: 'no-referrer',
-	      ...body
-	      })
+	  return fetch((BACKEND_URL + '/api/' + url)
+		       .replace(/([^:]\/)\/+/g, "$1"), {
+			   method: method,
+			   mode: 'cors',
+			   cache: 'no-cache',
+			   credentials: 'same-origin',
+			   headers: { 'Content-Type': 'application/json' },
+			   redirect: 'follow',
+			   referrerPolicy: 'no-referrer',
+			   ...body
+		       })
       }
 
       function get_api(url)        { return api_call(url); }
