Use Icon for add poropsed date

--- a/html/index.html
+++ b/html/index.html
@@ -65,7 +65,7 @@
 		   v-model="newProposal"
 		   >
 	  <div class="input-group-append">
-	    <button class="btn btn-secondary" type="button" v-on:click="addProposal">Add</button>
+	    <button class="btn btn-secondary" type="button" v-on:click="addProposal"><i class="bi bi-plus-lg"></i></button>
 	  </div></div>
 	</div>
 
