--- a/html/index.html
+++ b/html/index.html
@@ -53,6 +53,7 @@
 	</div>
 
 	<div class="form-group">
+	  <label for="dateFieldInput">Choose some dates others can pick</label>
 	  <small id="duplicateProposal" class="text-danger error">The proposal is already there</small>
 	  <div class="input-group mb-3">
 	    <input type="date"
