Prevent user from changes other users' input by accident
This just sets a cookie on the current browser.  If the cookie is not availalbe anymore or the user has another device/browser, he/she can not change her/his inputs there.  The backend still allows the user to change any data.

--- a/html/index.html
+++ b/html/index.html
@@ -247,10 +247,13 @@
 		      .then(c => {
 			  target = c
 			  this.currentEvent.attendees.push(target)
+			  document.cookie = this.newAttendee;
 			  this.newAttendee = '';
 		      })
 	      },
 	      toggle: function(attendee, date) {
+		  if( document.cookie != attendee.nick) { return; }
+
 		  if(attendee.free.includes(date)) {
 		      attendee.occupied.push(date)
 		      attendee.free.splice(attendee.free.indexOf(date), 1)
