Adjust font sizes to mobile devices

--- a/html/index.html
+++ b/html/index.html
@@ -14,6 +14,9 @@
       #calendar {margin: auto}
       #newEvent { width: 100%; max-width: 420px;}
       small.error { visibility: collapse; }
+      h1 { font-size: 8vh; }
+      h2 { font-size: 5vh; }
+      th, td { font-size: 4vh; }
     </style>
   </head>
   <body>
