--- a/html/index.html
+++ b/html/index.html
@@ -8,14 +8,16 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <style>
-      .free {background-color: #d4edda}
-      .occupied {background-color: #f8d7da}
-      body{  display: -ms-flexbox; display: flex; -ms-flex-align: center; align-items: center;  padding-top: 90px; padding-bottom: 40px; background-color: #f5f5f5;}
-      #calendar {margin: auto}
-      #newEvent { width: 100%; max-width: 420px;}
+      * { font-size: 4vh; }
+      body { display: -ms-flexbox; display: flex; -ms-flex-align: center;
+	     align-items: center;  padding-top: 90px; padding-bottom: 40px; }
+      td.free     { background-color: var( --bs-success-bg-subtle ) }
+      td.occupied { background-color: var( --bs-danger-bg-subtle ) }
+      tr.you { background-color: var(--bs-primary) }
+      #calendar { margin: auto }
+      #newEvent { width: 100%; max-width: 420px; }
       h1 { font-size: 8vh; }
       h2 { font-size: 5vh; }
-      th, td { font-size: 4vh; }
     </style>
   </head>
   <body>
@@ -105,19 +107,19 @@
 	      <i v-else class="bi bi-question"></i>
 	    </td>
 	  </tr>
-	  <tr class="table-primary"
+	  <tr class="you"
 	      v-if='!currentEvent.attendees.map(a => a.nick).includes(userName)'>
-	    <td>
-		<div class="input-group mb-3">
-		  <input v-model="newAttendee"
-			 v-on:keyup.enter="add"
-			 id="newAttendeeInput"
-			 type="text"
-			 class="form-control"
-			 placeholder="Your name"
-			 aria-label="Your name">
-		  <button class="btn btn-secondary" type="button" v-on:click="add">Participate</button>
+	    <td :colspan="currentEvent.proposals.length + 1">
 	      <small class="text-danger error">{{participantError}}</small>
+	      <div class="input-group mb-3">
+		<input v-model="newAttendee"
+		       v-on:keyup.enter="add"
+		       id="newAttendeeInput"
+		       type="text"
+		       class="form-control"
+		       placeholder="Your name"
+		       aria-label="Your name">
+		<button class="btn btn-secondary" type="button" v-on:click="add">Participate</button>
 	      </div>
 	    </td>
 	  </tr>
@@ -145,9 +147,10 @@
       function get_api(url)        { return api_call(url); }
       function post_api(url, body) { return api_call(url, 'POST', body); }
       function put_api(url, body)  { return api_call(url, 'PUT', body); }
-
+     
       var app = new Vue({
 	  el: '#calendar',
+
 	  data: {
 	      someother: false,
 	      newEvent: {
