Remove top and bottom margins

--- a/html/index.html
+++ b/html/index.html
@@ -9,8 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <style>
       * { font-size: 4vh; }
-      body { display: -ms-flexbox; display: flex; -ms-flex-align: center;
-	     align-items: center;  padding-top: 90px; padding-bottom: 40px; }
+      body { display: -ms-flexbox; display: flex; -ms-flex-align: center; align-items: center; }
       td.free     { background-color: var( --bs-success-bg-subtle ) }
       td.occupied { background-color: var( --bs-danger-bg-subtle ) }
       tr.you { background-color: var(--bs-primary) }
